// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Footer Renders correctly 1`] = `
<body>
  <div>
    <div
      class="fikasio-footer fikasio-theme-light"
    >
      <div
        class="fikasio-footer-container"
      >
        <div
          class="fikasio-footer-row fikasio-footer-row-top"
        >
          <div
            class="fikasio-footer-col fikasio-footer-col-full"
          >
            <div
              class="fikasio-footer-content-center"
            />
          </div>
        </div>
        <div
          class="fikasio-footer-row fikasio-footer-row-bottom"
        >
          <div
            class="fikasio-footer-col fikasio-footer-col-third"
          >
            <div
              class="fikasio-footer-content-left"
            />
          </div>
          <div
            class="fikasio-footer-col fikasio-footer-col-third"
          >
            <div
              class="fikasio-footer-content-center"
            />
          </div>
          <div
            class="fikasio-footer-col fikasio-footer-col-third"
          >
            <div
              class="fikasio-footer-content-right"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Footer Renders correctly with children 1`] = `
<body>
  <div>
    <div
      class="fikasio-footer fikasio-theme-light"
    >
      <div
        class="fikasio-footer-container"
      >
        <div
          class="fikasio-footer-row fikasio-footer-row-top"
        >
          <div
            class="fikasio-footer-col fikasio-footer-col-full"
          >
            <div
              class="fikasio-footer-content-center"
            >
              <div>
                <div>
                  Child 4
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="fikasio-footer-row fikasio-footer-row-bottom"
        >
          <div
            class="fikasio-footer-col fikasio-footer-col-third"
          >
            <div
              class="fikasio-footer-content-left"
            >
              <div>
                <div>
                  Child 1
                </div>
              </div>
            </div>
          </div>
          <div
            class="fikasio-footer-col fikasio-footer-col-third"
          >
            <div
              class="fikasio-footer-content-center"
            >
              <div>
                <div>
                  Child 2
                </div>
              </div>
            </div>
          </div>
          <div
            class="fikasio-footer-col fikasio-footer-col-third"
          >
            <div
              class="fikasio-footer-content-right"
            >
              <div>
                <div>
                  Child 3
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
